fix: make bottom bar visible

--- a/src/App.css
+++ b/src/App.css
@@ -24,23 +24,19 @@
   width: 100%;
   box-sizing: border-box;
   overflow: hidden !important;
-  position: relative;
 }
 
 .calls-container {
-  flex: none;
+  flex: 1;
   display: flex;
   flex-direction: column;
-  height: calc(100vh - 158px);
-  overflow: hidden;
-  margin: 1rem 0 56px 0;
+  overflow: auto;
+  margin: 1rem 0 0 0;
   padding: 0;
   position: relative;
   width: 100%;
   box-sizing: border-box;
 }
-
-/* Coming soon styles moved to TabContent.css */
 
 .logo {
   height: 6em;
